--- a/Pages/Page 3/forthPage.html
+++ b/Pages/Page 3/forthPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,43 +10,40 @@
 </head>
 
 <body>
-    <h1>Do you love meeeeee?</h1>
-    <div class="content">    
-	    <img id="image" src="../Assets/smart.gif">
+    <h1>will you be my valentine?</h1>
+    <div class="content">
+        <img id="image" src="../Assets/smart.gif">
         <div class="buttons">
-        <button type="button" onclick = "yesFunction()">
-            <span>Yes 🤭</span>
-        </button>
-        <button type="button" onclick = "noFunction()">
-            <span>No &#128532;</span>
-        </button>
+            <button type="button" onclick="yesFunction()">
+                <span>Yes 🤭</span>
+            </button>
+            <button type="button" onclick="noFunction()">
+                <span>No &#128532;</span>
+            </button>
         </div>
-        <button type="button" class="romantic1" onclick = "myFunction()">
+        <button type="button" class="romantic1" onclick="myFunction()">
             <span>Make Everything Romantic</span>
         </button>
-        <button type="button" class="romantic2" onclick = "myFunction()">
+        <button type="button" class="romantic2" onclick="myFunction()">
             <span>Make Everything Romantic</span>
         </button>
-        <button type="button" class="romantic3" onclick = "myFunction()">
+        <button type="button" class="romantic3" onclick="myFunction()">
             <span>Make Everything Romantic</span>
         </button>
-        <button type="button" class="romantic4" onclick = "myFunction()">
+        <button type="button" class="romantic4" onclick="myFunction()">
             <span>Make Everything Romantic</span>
         </button>
-        <button type="button" class="romantic5" onclick = "myFunction()">
+        <button type="button" class="romantic5" onclick="myFunction()">
             <span>Make Everything Romantic</span>
         </button>
-        <button type="button" class="romantic6" onclick = "myFunction()">
+        <button type="button" class="romantic6" onclick="myFunction()">
             <span>Make Everything Romantic</span>
         </button>
-        <button type="button" class="romantic7" onclick = "myFunction()">
+        <button type="button" class="romantic7" onclick="myFunction()">
             <span>Make Everything Romantic</span>
         </button>
     </div>
 
-    <div class="watermark">
-        Made by ANTONY❣️
-    </div>
 
     <script>
         function yesFunction() {
@@ -59,4 +57,5 @@
         }
     </script>
 </body>
+
 </html>
