--- a/Pages/Page 5/yes.html
+++ b/Pages/Page 5/yes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +11,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <img src="../Assets/hug.gif">
-        <h1>love youuuuu  <br>Liya</h1>
-            <div class="heart"></div>   
+        <h1>lets go for a coffee date <br>boxing champ</h1>
+        <div class="heart"></div>
     </div>
-    <div class="watermark">
-        MADE BY ANTONY💛
-    </div>
-    <script src="yes_anime.js" ></script>
+
+    <script src="yes_anime.js"></script>
     <script src="yes.js"></script>
 </body>
+
 </html>
