--- a/Pages/Page 5/yes.html
+++ b/Pages/Page 5/yes.html
@@ -15,9 +15,13 @@
 <body>
     <div class="container">
         <img src="../Assets/hug.gif">
-        <h1>lets go for a coffee date <br>boxing champ</h1>
+        <h1>lets go for a <br> coffee date</h1>
         <div class="heart"></div>
     </div>
+
+    <!-- Firebase SDK (Compatibility Version) -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 
     <script src="yes_anime.js"></script>
     <script src="yes.js"></script>
