--- a/Pages/Page 8/no3.html
+++ b/Pages/Page 8/no3.html
@@ -36,12 +36,12 @@
     <div class="circle"></div>
 
     <h1>Click on &nbsp;<span class="red"><b>YES,</b></span>&nbsp; if you really don't &nbsp;<span
-            class="red"><b>LOVE</b></span>&nbsp; me.</h1>
+            class="red"><b>LIKE</b></span>&nbsp; me.</h1>
     <div class="content">
         <img id="image" src="../Assets/angry.gif">
         <div class="buttons">
-            <button type="button" class="btn btn-danger btn-lg" id="yes" onmouseover="moveButton(); "
-                onclick="moveButton();">
+            <button type="button" class="btn btn-danger btn-lg" id="yes" onmouseover="moveButton()"
+                onclick="moveButton()">
                 <span>Yes 🤭</span>
             </button>
             <button type="button" class="btn btn-danger " id="no" onclick="noFunction()"
